<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">
  <Button
    android:id="@+id/LogoutButton"
    android:layout_width="165dp"
    android:layout_height="82dp"
    android:layout_marginTop="16dp"
    android:text="@string/logout_button"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/LogButton" />
  <Button
    android:id="@+id/LogButton"
    android:layout_width="165dp"
    android:layout_height="82dp"
    android:layout_marginTop="16dp"
    android:text="@string/log_button"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/RepInputEditText" />
  <EditText
    android:id="@+id/WeightInputEditText"
    android:layout_width="273dp"
    android:layout_height="48dp"
    android:layout_marginStart="8dp"
    android:padding="8dp"
    android:hint="@string/enter_weight"
    android:inputType="number"
    app:layout_constraintBaseline_toBaselineOf="@+id/WeightLabelTextView"
    app:layout_constraintStart_toEndOf="@id/WeightLabelTextView" />
  <EditText
    android:id="@+id/RepInputEditText"
    android:layout_width="273dp"
    android:layout_height="48dp"
    android:layout_marginStart="8dp"
    android:padding="8dp"
    android:hint="@string/enter_reps"
    android:inputType="number"
    app:layout_constraintBaseline_toBaselineOf="@+id/RepLabelTextView"
    app:layout_constraintStart_toEndOf="@id/RepLabelTextView" />
  <EditText
    android:id="@+id/ExerciseInputEditText"
    android:layout_width="273dp"
    android:layout_height="48dp"
    android:layout_marginStart="8dp"
    android:padding="8dp"
    android:hint="@string/enter_exercise"
    android:inputType="text"
    app:layout_constraintBaseline_toBaselineOf="@+id/ExerciseLabelTextView"
    app:layout_constraintStart_toEndOf="@id/ExerciseLabelTextView" />

  <TextView
    android:id="@+id/ExerciseLabelTextView"
    android:layout_width="100dp"
    android:layout_height="36dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:text="@string/exercise"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/recyclerview" />

  <TextView
    android:id="@+id/RepLabelTextView"
    android:layout_width="100dp"
    android:layout_height="36dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:text="@string/reps"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/WeightLabelTextView" />

  <TextView
    android:id="@+id/WeightLabelTextView"
    android:layout_width="100dp"
    android:layout_height="36dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:text="@string/weight"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ExerciseLabelTextView" />


  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerview"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:padding="16dp"
    app:layout_constraintDimensionRatio="w,1:1"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/topAppBar"
    tools:listitem="@layout/recyclerview_item" />

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/topAppBar"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="?attr/colorPrimary"
    app:layout_constraintTop_toTopOf="parent"
    app:title="GymLog"
    app:titleCentered="true"
    app:titleTextColor="@android:color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>